force-app/main/default/objects/LoginAsRedirectSetting__c/LoginAsRedirectSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Map login as URL based on User role</description>
    <label>Login As Redirection</label>
</CustomObject>