force-app/main/default/objects/LoginAsRedirectSetting__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <description>Redirect URL for Admin role</description>
    <label>Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>