force-app/main/default/objects/LoginAsRedirectSetting__c/fields/Driver_Admin__c.field-meta.xml
<CustomField>
    <fullName>Driver_Admin__c</fullName>
    <description>Redirect URL for Driver/Admin role</description>
    <label>Driver/Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>