force-app/main/default/objects/LoginAsRedirectSetting__c/fields/Driver_Manager__c.field-meta.xml
<CustomField>
    <fullName>Driver_Manager__c</fullName>
    <description>Redirection URL for Driver/Manager role</description>
    <label>Driver/Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>