force-app/main/default/objects/LoginAsRedirectSetting__c/fields/roles__c.field-meta.xml
<CustomField>
    <fullName>roles__c</fullName>
    <description>Store list of roles in which login as redirect is require</description>
    <label>roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>